# 3DViewer_CPP

./: Makefile  build.sh
3D/: Makefile  build.sh
3dviewer/: 3dviewer.pro  CMakeLists.txt  controller.cpp  controller.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  mainwindow.ui.autosave  model.cpp  model.h  resources.qrc  widget.cpp  widget.h  widget.ui
3dviewer/shaders/: vshader.vsh
build-3dviewer-Desktop-Debug/: CMakeCache.txt  Makefile  cmake_install.cmake
build-3dviewer-Desktop-Debug/.cmake/api/v1/reply/: codemodel-v2-53cf23f852fb08d68da9.json  directory-.-Debug-5a2040da902fda6e4882.json  index-2024-11-08T23-50-11-0755.json  target-3dviewer-Debug-83c64b9d9cbfcdb7f9c9.json
build-3dviewer-Desktop-Debug/.cmake/api/v1/reply.prev/: cache-v2-e1fb48b27242dff8bd88.json  cmakeFiles-v1-004d805c5d7bf5fe9ff7.json  codemodel-v2-d73c743662d7030376a2.json  directory-.-Debug-f65b243a44817f183c6d.json  index-2024-11-08T15-57-01-0045.json  target-3dviewer-Debug-43ebfb19aa4704d51c29.json  target-3dviewer_autogen-Debug-c4a5b9b8b3705d469b22.json
build-3dviewer-Desktop-Debug/.qt/: QtDeploySupport.cmake
build-3dviewer-Desktop-Debug/.qtc_clangd/: compile_commands.json
build-3dviewer-Desktop-Debug/.qtc_clangd/.cache/clangd/index/: QApplication.54128CD62F57B459.idx  QFile.566C006F01D7F138.idx  QLocale.C6932F139E76F85B.idx  QMatrix4x4.12434565B574C33F.idx  QOpenGLBuffer.667AD31E7979C103.idx  QOpenGLShaderProgram.00D895D1EEB1EDDE.idx  QOpenGLTexture.3457C1A54EC79D04.idx  QOpenGLWidget.5CBAE1C828E7A325.idx  QScopedPointer.1E49002C24553831.idx  QStringList.221F37407EA8C9BE.idx  QSurfaceFormat.07C59C79C2BAE6CF.idx  QTextStream.5860A1C26BCEA0E7.idx  QTranslator.C16B9C8A2E8A4E75.idx  QVariant.70269C72ACB06167.idx  QVector.E09971CC386BF9FB.idx  QVector3D.9EC7CA5E7B4486D2.idx  QWidget.93AB6264B865F5CB.idx  __locale.2D32E9862A6228BF.idx  __mutex_base.B72617C8B799451C.idx  __stddef_max_align_t.h.9FBEAADD9401B233.idx  assert.h.C3C052028E39186E.idx  availability.h.E3F481D0A49EF2B2.idx  bitset.8EE298DA0BB5C2B3.idx  cassert.ED5B80B0361134F5.idx  cdefs.h.CF039C5B4F0B616F.idx  cerrno.392C5E0F483C5A74.idx  controller.cpp.22CF58F8AFC123AF.idx  controller.h.1CAB2A1CA272788D.idx  cstdarg.6CC4226BB1C03ABA.idx  directory_entry.h.C1E3BFAADE398713.idx  directory_iterator.h.4A1AC8BED48DDA3C.idx  filesystem.3B943CFC93785420.idx  (+221 more)
build-3dviewer-Desktop-Debug/3dviewer.app/Contents/: Info.plist
build-3dviewer-Desktop-Debug/3dviewer_autogen/: moc_predefs.h
build-3dviewer-Desktop-Debug/3dviewer_autogen/EWIEGA46WW/: moc_widget.cpp  moc_widget.cpp.d  qrc_resources.cpp
build-3dviewer-Desktop-Debug/3dviewer_autogen/include/: ui_widget.h
opengl/: .qmake.stash  CMakeLists.txt  main.cpp  opengl.pro  shaders.qrc  widget.cpp  widget.h
